# PokeMaster

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  QUICK_START.md  README.md  ROADMAP.md  SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  main.rs
src/api/: pokemonTCG.ts
src/components/: CardInventory.css  CardInventory.tsx  CardItem.css  CardItem.tsx  Header.css  Header.tsx  QuickAdd.css  QuickAdd.tsx  Sidebar.css  Sidebar.tsx
src/styles/: glassmorphism.css
src/types/: index.ts
